# kedro-sandbox

./: README.md
dsmDataset/: customS3filesystem.py  databaseDataset.py  dsmDataset.py
dsmDataset/utils/: __init__.py  clean.py  creadentials.py  dataframe.py  handler.py
etl-pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db
etl-pipeline/conf/base/: catalog.yml  parameters_landing.yml
etl-pipeline/conf/local/: credentials.yml.template
etl-pipeline/src/: dsmDataset
etl-pipeline/src/etl_pipeline/: __init__.py  __main__.py
etl-pipeline/src/etl_pipeline/pipelines/landing/: __init__.py  nodes.py  pipeline.py
etl-pipeline/tests/pipelines/landing/: test_pipeline.py
