[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "etl_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
etl-pipeline = "etl_pipeline.__main__:main"

[tool.kedro]
package_name = "etl_pipeline"
project_name = "etl-pipeline"
kedro_init_version = "0.19.5"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "etl_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
